# sound_radar_classifier

./: .gitignore  README.md  alembic.ini  example.env  package.json  pyproject.toml  vite.config.js
.opencode/skills/ai-slop/: SKILL.md
.opencode/skills/conventional-commits/: SKILL.md
.opencode/skills/hci/: SKILL.md
.opencode/skills/pytest/: SKILL.md
docs/: PRD.md  README.md  architecture.md  collaboration.md  index.md  roadmap.md  setup.md  tasks.md
src/sound_radar_classifier/: app.py
src/sound_radar_classifier/core/: base.py  config.py  database.py  responses.py
src/sound_radar_classifier/core/client/: main.css  main.ts
src/sound_radar_classifier/core/templates/: base.html
src/sound_radar_classifier/features/audio/: models.py  routes.py  schemas.py  services.py
src/sound_radar_classifier/features/audio/templates/audio/: index.html
src/sound_radar_classifier/features/radar/: models.py  routes.py  schemas.py  services.py
src/sound_radar_classifier/features/radar/client/: radar.ts
src/sound_radar_classifier/features/radar/templates/radar/: index.html
src/sound_radar_classifier/features/settings/: models.py  routes.py  schemas.py  services.py
src/sound_radar_classifier/features/settings/client/: settings.ts
src/sound_radar_classifier/features/settings/templates/: index.html
src/sound_radar_classifier/migrations/: env.py
src/sound_radar_classifier/migrations/versions/: 2e3fdf8086f4_create_initial_tables.py
src/types/: htmx.d.ts
